# supermarket_problem

./: .gitignore  Dockerfile  LICENSE  README.md  Spacefile  index.html  package.json  prueba.md  pyproject.toml  replace_urls.py  rxconfig.py  schema.gql  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: publish_back.yml  publish_front.yml
assets/: animated_background.css
front_app/: App.tsx  animated_background.css  index.css  theme.tsx  utils.tsx
front_app/components/: BarChart.tsx  DataTable.tsx  Gantt.tsx  KPICard.tsx  PageTemplate.tsx  PieChart.tsx  ScatterGant.tsx  SideBar.tsx  TextBlock.tsx
front_app/models/: Cashier.tsx  Client.tsx  SolutionData.tsx  index.tsx
front_app/pages/: index.tsx  not_found.tsx
front_app/pages/interface/: cashier.tsx  client.tsx  faq.tsx  problem.tsx
supermarket_front/: __init__.py  styles.py  supermarket_front.py
supermarket_front/components/: __init__.py  datatable.py  loading_comp.py  sidebar.py  table_state.py  timeline.py  wip.py
supermarket_front/pages/: __init__.py  index.py
supermarket_front/pages/project/: __init__.py  cashier_data.py  clients.py  info.py  run.py
supermarket_implementation/: __info__.py  __init__.py  __main__.py  app.py  models.py  scheduling.py  server.py
supermarket_implementation/utils/: __init__.py  clients.py  extra_data.py  kpis.py  problem.py
supermarket_problem/: models.py
supermarket_problem/utils/: clients.py
