[tool.poetry]
name = "supermarket-problem"
version = "0.1.0"
description = "Solve a SuperMarket allocation problem using a MIL solver"
authors = ["ricardoleal20 <rick.leal420@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pymath_compute = "~=0.3.0"
pydash = "~=8.0.1"
plotly = "~=5.23.0"
pandas = "~=2.2.2"
ortools = "~=9.11.4210"
fastapi = {extras = ["standard"], version = "~=0.115.2"}

[tool.poetry.dev-dependencies]
pylint = "~=3.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
